Thu May 30 18:37:51 1996  Scott Christley <scottc@net-community.com>

	* configure.bat: Modifications for new directory structure.
	* Source/Makefile.in (uninstall): New target.
	* Source/Makefile.sed.nt: Modifications for Source/Makefile.in
	changes and new directory structure.

Tue Feb 13 09:52:02 1996  Scott Christley <scottc@net-community.com>

	* Headers/AppKit/NSText.h: Removed WIN32 instance variables

Sun Feb 11 14:17:15 1996  Scott Christley <scottc@net-community.com>

	* Makefile.in: Changed library name from libAppKit to libgnustep
	* Renamed file libAppKit.m to libgnustep.m
	* Changed terminology "Application Kit Library" to
	"Application Library" to eliminate trademark conflicts with NeXT.

Thu Feb  8 04:53:45 1996  Scott Christley <scottc@net-community.com>

	* *.m: Conforms to NSCoding protocol
	* *.h: Added NSCoding protocol methods